<resources>
	<string name="app_name">清禄集团</string>
	<string name="AlertDialog_ApkNew_Title">发现新版本，版本号：</string>
	<string name="AlertDialog_ApkNew_Application_Message">是否要更新？</string>
	<string name="AlertDialog_Exit_Title">是否要退出？</string>
	<string name="AlertDialog_Exit_Application_Message">确定要退出系统吗？</string>
	<string name="AlertDialog_Exit_To_Bindin_Message">确定要登出系统并退出吗？</string>
	<string name="AlertDialog_Exit_To_LocalMenu_Message">确定要返回离线主菜单吗？</string>
	<string name="Button_Positive_Title">确定</string>
	<string name="Button_Negative_Title">取消</string>
	<string name="ImageView_ContentDescription_Logo">清禄图标</string>
	<string name="Toast_NeedBindin_Text">请先绑定系统</string>
	<string name="TextView_Bindin_Text">请绑定系统</string>
	<string name="TextView_UserId_Text">用户名</string>
	<string name="TextView_Password_Text">密码</string>
	<string name="TextView_BindMac_Text">绑定码</string>
	<string name="TextView_Local">离线使用</string>
	<string name="Button_Bindin_Text">绑定</string>
	<string name="Button_Logout_Text">登出</string>
	<string name="Button_Local_Text">离线使用</string>
	<string name="Button_Online_Text">在线使用</string>
	<string name="Button_ScanLabel_Text">条码扫描</string>
	<string name="TextView_Company_Text">公司</string>
	<string name="MessageUtil_Message_InitSystemData">正在初始化系统信息</string>
	<string name="MessageUtil_Message_CheckingIn">正在绑定系统</string>
	<string name="MessageUtil_Message_CheckInFail">绑定失败</string>
	<string name="MessageUtil_Message_Ftp_Connection_Fail">FTP连接失败</string>
	<string name="MessageUtil_Message_Ftp_Download_Fail">FTP连接失败</string>
	<string name="MessageUtil_Message_Apk_Inexist">Apk文件不存在</string>
	<string name="MessageUtil_Message_Apk_New">发现新版本程序。是否需要更新?</string>
	<string name="MessageUtil_Message_Bindin_Welcome">欢迎登陆</string>
	<string name="MessageUtil_Message_Ufh_Open_Fail">Ufh 打开失败</string>
	<string name="MessageUtil_Message_Ufh_Opened">Ufh 成功打开</string>
	<string name="MessageUtil_Message_Ufh_Closed">Ufh 成功关闭</string>
	<string name="MessageUtil_Message_Ufh_Close_Fail">Ufh 关闭失败</string>
	<string name="MessageUtil_Message_Please_Input_Password">请输入密码</string>
	<string name="MessageUtil_Message_Please_Input_Userid">请输入用户名</string>
	<string name="Button_QrBindin_Text">扫码</string>
	<string name="Button_Scanlabel_Open_Text">打开</string>
	<string name="Button_Scanlabel_Set_Text">设置</string>
	<string name="Button_Scanlabel_Close_Text">关闭</string>
	<string name="Button_Scanlabel_Read_Text">读取</string>
	<string name="Button_Scanlabel_Stop_Text">停止</string>
	<string name="Button_Scanlabel_Write_Text">写入</string>
	<string name="Button_Scanlabel_Back_Text">返回</string>
	<string name="MessageUtil_Message_Wrong_Result">二维码错误</string>
	<string name="TabHost_Set_Label">设置</string>
	<string name="Button_Scanlabel_6B_Text">6B</string>
	<string name="Button_Scanlabel_6C_Text">6C</string>
	<string name="TextView_ScanLabel_Label_Locked_Text">未解锁条码:</string>
	<string name="TextView_ScanLabel_Label_Unlocked_Text">已解锁条码:</string>
	<string name="TextView_ScanLabel_Version">版本:</string>
	<string name="TextView_ScanLabel_DMin">频率起:</string>
	<string name="TextView_ScanLabel_DMax">频率止:</string>
	<string name="TextView_ScanLabel_Power">功率:</string>
	<string name="TextView_ScanLabel_Time">扫描次数:</string>
	<string name="SoundPool_Source_Path">/etc/Scan_new.ogg</string>
	<string name="Button_Scanlabel_Clear_Text">清空</string>
	<string name="Button_Scanlabel_ViewSet_On">显示</string>
	<string name="Button_Scanlabel_ViewSet_Off">不显示</string>
	<string name="TextView_ScanLabel_Col_Qty">次数</string>
	<string name="TextView_ScanLabel_Col_Code">条码号</string>
	<string name="ProgressDialog_Ftp_Download_Title">正在下载</string>
	<string name="ProgressDialog_Ftp_Download_Text">已下载</string>
	<string name="TextView_Version_Text">版本号：</string>
	<string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
	<string name="Image_ContentDescription_Logo">Logo</string>
	<string-array name="Spinner_Items_Frequencies">
		<item>902.75 MHz</item>
		<item>903.25 MHz</item>
		<item>903.75 MHz</item>
		<item>904.25 MHz</item>
		<item>904.75 MHz</item>
		<item>905.25 MHz</item>
		<item>905.75 MHz</item>
		<item>906.25 MHz</item>
		<item>906.75 MHz</item>
		<item>907.25 MHz</item>
		<item>907.75 MHz</item>
		<item>908.25 MHz</item>
		<item>908.75 MHz</item>
		<item>909.25 MHz</item>
		<item>909.75 MHz</item>
		<item>910.25 MHz</item>
		<item>910.75 MHz</item>
		<item>911.25 MHz</item>
		<item>911.75 MHz</item>
		<item>912.25 MHz</item>
		<item>912.75 MHz</item>
		<item>913.25 MHz</item>
		<item>913.75 MHz</item>
		<item>914.25 MHz</item>
		<item>914.75 MHz</item>
		<item>915.25 MHz</item>
		<item>915.75 MHz</item>
		<item>916.25 MHz</item>
		<item>916.75 MHz</item>
		<item>917.25 MHz</item>
		<item>917.75 MHz</item>
		<item>918.25 MHz</item>
		<item>918.75 MHz</item>
		<item>919.25 MHz</item>
		<item>919.75 MHz</item>
		<item>920.25 MHz</item>
		<item>920.75 MHz</item>
		<item>921.25 MHz</item>
		<item>921.75 MHz</item>
		<item>922.25 MHz</item>
		<item>922.75 MHz</item>
		<item>923.25 MHz</item>
		<item>923.75 MHz</item>
		<item>924.25 MHz</item>
		<item>924.75 MHz</item>
		<item>925.25 MHz</item>
		<item>925.75 MHz</item>
		<item>926.25 MHz</item>
		<item>926.75 MHz</item>
		<item>927.25 MHz</item>
	</string-array>
	<string-array name="Spinner_Items_Powers">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>15</item>
		<item>16</item>
		<item>17</item>
		<item>18</item>
		<item>19</item>
		<item>20</item>
		<item>21</item>
		<item>22</item>
		<item>23</item>
		<item>24</item>
		<item>25</item>
		<item>26</item>
		<item>27</item>
		<item>28</item>
		<item>29</item>
		<item>30</item>
	</string-array>
</resources>
