<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dip">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="center"
			android:orientation="vertical">

			<ImageView
				android:layout_width="160dip"
				android:layout_height="120dip"
				android:contentDescription="@string/Image_ContentDescription_Logo"
				android:src="@drawable/chingluh_logo_small" />
		</LinearLayout>

		<TextView
			android:id="@+id/textViewUserId"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="left"
			android:text="@string/TextView_UserId_Text"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/editTextUserId"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:ems="10">

			<requestFocus />
		</EditText>

		<TextView
			android:id="@+id/textViewPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="left"
			android:text="@string/TextView_Password_Text"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/editTextPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:ems="10"
			android:inputType="textPassword" />

		<TextView
			android:id="@+id/textViewBindMac"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="left"
			android:text="@string/TextView_BindMac_Text"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/editTextBindMac"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:ems="10"
			android:inputType="textPassword" />

		<TextView
			android:id="@+id/textViewCompany"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="left"
			android:text="@string/TextView_Company_Text"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Spinner
			android:id="@+id/spinnerCompany"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:layout_margin="3dip" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/buttonBindin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="3dip"
				android:layout_weight="1"
				android:background="@drawable/button_background"
				android:text="@string/Button_Bindin_Text"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<Button
				android:id="@+id/buttonQrBindin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="3dip"
				android:layout_weight="1"
				android:background="@drawable/button_background"
				android:text="@string/Button_QrBindin_Text"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<Button
				android:id="@+id/buttonLogout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="3dip"
				android:layout_weight="1"
				android:background="@drawable/button_background"
				android:text="@string/Button_Logout_Text"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/buttonOnline"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="3dip"
				android:layout_weight="1"
				android:background="@drawable/button_background"
				android:text="@string/Button_Online_Text"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<Button
				android:id="@+id/buttonLocal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="3dip"
				android:layout_weight="1"
				android:background="@drawable/button_background"
				android:text="@string/Button_Local_Text"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>

		<TextView
			android:id="@+id/textViewVersion"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="3dip"
			android:gravity="center"
			android:text="@string/TextView_Version_Text"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="15sp" />
	</LinearLayout>
</ScrollView>
